--- a/src/main/resources/ApplicationProjet/commande.fxml
+++ b/src/main/resources/ApplicationProjet/commande.fxml
@@ -13,7 +13,7 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#272e38" height="742.0" stroke="#cdcdcd" strokeType="INSIDE" width="166.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="820.0" AnchorPane.topAnchor="0.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#272e38" height="720.0" stroke="#cdcdcd" strokeType="INSIDE" width="166.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="914.0" AnchorPane.topAnchor="0.0" />
       <Button fx:id="btnHistorique" layoutY="180.0" mnemonicParsing="false" onAction="#PageHistorique" prefHeight="60.0" prefWidth="166.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Historique" textFill="WHITE">
          <font>
             <Font size="18.0" />
@@ -34,60 +34,61 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <Label layoutX="531.0" layoutY="73.0" text="Element nouveau" textFill="WHITE" underline="true">
+      <Label layoutX="763.0" layoutY="126.0" text="Element nouveau" textFill="WHITE" underline="true">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="536.0" layoutY="418.0" text="Element existant" textFill="WHITE" underline="true">
+      <Label layoutX="270.0" layoutY="126.0" text="Element existant" textFill="WHITE" underline="true">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="saisieCodeNew" layoutX="305.0" layoutY="180.0" />
-      <TextField fx:id="saisieNom" layoutX="469.0" layoutY="180.0" />
-      <TextField fx:id="saisieUnite" layoutX="631.0" layoutY="180.0" />
-      <TextField fx:id="saisiePrixAchat" layoutX="793.0" layoutY="180.0" />
-      <TextField fx:id="saisieQteNew" layoutX="544.0" layoutY="258.0" />
-      <TextField fx:id="saisieCodeEx" layoutX="557.0" layoutY="504.0" />
-      <TextField fx:id="saisieQteEX" layoutX="557.0" layoutY="579.0" />
-      <Label layoutX="356.0" layoutY="150.0" text="Code" textFill="WHITE">
+      <TextField fx:id="saisieCodeNew" layoutX="817.0" layoutY="259.0" />
+      <TextField fx:id="saisieNom" layoutX="817.0" layoutY="310.0" />
+      <TextField fx:id="saisieUnite" layoutX="817.0" layoutY="360.0" />
+      <TextField fx:id="saisiePrixAchat" layoutX="817.0" layoutY="455.0" />
+      <TextField fx:id="saisieQteNew" layoutX="817.0" layoutY="405.0" />
+      <TextField fx:id="saisieCodeEx" layoutX="282.0" layoutY="272.0" />
+      <TextField fx:id="saisieQteEX" layoutX="282.0" layoutY="360.0" />
+      <Label layoutX="731.0" layoutY="256.0" text="Code" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="521.0" layoutY="150.0" text="Nom" textFill="WHITE">
+      <Label layoutX="733.0" layoutY="308.0" text="Nom" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="817.0" layoutY="150.0" text="Prix d'achat" textFill="WHITE">
+      <Label layoutX="703.0" layoutY="453.0" text="Prix d'achat" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="682.0" layoutY="150.0" text="Unite" textFill="WHITE">
+      <Label layoutX="731.0" layoutY="403.0" text="Unite" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="580.0" layoutY="225.0" text="Quantite" textFill="WHITE">
+      <Label layoutX="716.0" layoutY="358.0" text="Quantite" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="593.0" layoutY="549.0" text="Quantite" textFill="WHITE">
+      <Label layoutX="192.0" layoutY="358.0" text="Quantite" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Label layoutX="608.0" layoutY="474.0" text="Code" textFill="WHITE">
+      <Label layoutX="217.0" layoutY="269.0" text="Code" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="btnAchatEX" layoutX="534.0" layoutY="624.0" mnemonicParsing="false" onAction="#achatEx" prefHeight="53.0" prefWidth="195.0" text="ACHAT" />
-      <Button fx:id="btnAchatNew" layoutX="526.0" layoutY="307.0" mnemonicParsing="false" onAction="#achatNew" prefHeight="53.0" prefWidth="195.0" text="ACHAT" />
+      <Button fx:id="btnAchatEX" layoutX="259.0" layoutY="526.0" mnemonicParsing="false" onAction="#achatEx" prefHeight="53.0" prefWidth="195.0" text="ACHAT" />
+      <Button fx:id="btnAchatNew" layoutX="794.0" layoutY="526.0" mnemonicParsing="false" onAction="#achatNew" prefHeight="53.0" prefWidth="195.0" text="ACHAT" />
+      <Line endX="28.0" endY="410.0" layoutX="574.0" layoutY="310.0" startX="28.0" startY="-172.70709228515625" />
    </children>
    <opaqueInsets>
       <Insets />
