--- a/src/main/resources/ApplicationProjet/chaineProd.fxml
+++ b/src/main/resources/ApplicationProjet/chaineProd.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="bpHistorique" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerChaine">
+<AnchorPane fx:id="bpHistorique" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #14242B;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ApplicationProjet.ControllerChaine">
    <children>
-      <Label alignment="CENTER" layoutX="391.0" layoutY="19.0" prefHeight="41.0" prefWidth="375.0" text="Chaine de production" textFill="WHITE">
+      <Label alignment="CENTER" layoutX="456.0" layoutY="20.0" prefHeight="41.0" prefWidth="375.0" text="Chaine de production" textFill="WHITE">
          <font>
             <Font size="24.0" />
          </font>
@@ -34,20 +38,24 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <TableView fx:id="tableViewStock" fixedCellSize="0.0" layoutX="202.0" layoutY="88.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="633.0" prefWidth="493.0" style="-fx-background-color: #14242B;" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="70.0">
-         <columns>
-            <TableColumn fx:id="colNom" prefWidth="125.0" sortType="DESCENDING" text="Nom" />
-            <TableColumn fx:id="colCode" prefWidth="183.0" text="Code" />
-            <TableColumn fx:id="colQte" prefWidth="107.0" text="Quantité" />
-            <TableColumn fx:id="colUnite" prefWidth="91.0" text="Unité" />
-            <TableColumn fx:id="colAchat" prefWidth="108.0" text="Prix Achat" />
-            <TableColumn fx:id="colVente" prefWidth="144.0" text="Prix Vente" />
-            <TableColumn fx:id="colOrigine" prefWidth="208.0" text="Origine" />
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#606d79" height="180.0" layoutX="187.0" layoutY="90.0" stroke="BLACK" strokeType="INSIDE" width="856.0" />
+      <TextField layoutX="574.0" layoutY="107.0" prefHeight="25.0" prefWidth="115.0" promptText="Niveau d'activation" />
+      <Button layoutX="609.0" layoutY="217.0" mnemonicParsing="false" style="-fx-border-width: 1px 1px 1px 1px; -fx-border-color: white;" text="Valider" />
+      <Line endX="70.11111450195312" endY="90.0" layoutX="405.0" layoutY="180.0" startX="70.11111450195312" startY="-90.0" />
+      <Text fill="WHITE" layoutX="269.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Elements en entrée">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text fill="WHITE" layoutX="848.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Elements en sortie">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Line endX="70.11111450195312" endY="90.0" layoutX="720.0" layoutY="181.0" startX="70.11111450195312" startY="-90.0" />
+      <Line endX="100.0" layoutX="624.0" layoutY="168.0" startX="-100.0" />
+      <Line endX="68.66668701171875" endY="-23.4444580078125" layoutX="655.0" layoutY="191.0" startX="55.33331298828125" startY="-36.5" />
+      <Line endX="59.4444580078125" endY="-61.4444580078125" layoutX="664.0" layoutY="230.0" startX="46.0" startY="-48.33332824707031" />
    </children>
    <opaqueInsets>
       <Insets />
